--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -73,6 +73,10 @@
       "title": "Mentions légales - Make.org",
       "description": "Trouvez ici les mentions légales du site."
     },
+    "moderation": {
+      "title": "Make.org ∙ Charte de modération",
+      "description": "Comment passer la modération ? Comment rencontrer un franc succès sur la plateforme ? Plutôt qu’un (trop) long discours, nous prenons le parti de quelques exemples humoristiques (et félins) pour vous expliquer notre politique de modération."
+    },
     "privacy_policy": {
       "title": "Charte de données personnelles - Make.org",
       "description": "Tout comprendre sur le traitement de vos données personnelles lors d'une visite sur le site."
@@ -1213,6 +1217,90 @@
     "host_phone_number": "{{host_number}}",
     "cnil": "Numéro de déclaration CNIL : ",
     "cnil_number": "{{cnil_number}}"
+  },
+  "moderation_charter": {
+    "unsuitable_label": "DÉCONSEILLÉ",
+    "adapted_label": "Adapté",
+    "refused_label": "Refusé", 
+    "validated_label": "Validé",
+    "title": "Charte de modération", 
+    "description": "Quelles sont les propositions refusées lors de la modération sur Make.org ? Comment formuler une proposition correctement ? Chaque proposition soumise sur la plateforme est modérée à la main par les équipes de modérateurs de Make.org, au regard des critères suivants de la charte de modération¹. La modération se fait sous 48 heures après envoi de la proposition. Vous serez informé.e par email (sous réserve d’avoir validé votre adresse email à l’inscription) de la publication ou du refus de votre proposition. Les petites fautes d'orthographe sont corrigées par les modérateurs, mais il vous revient de publier de nouveau votre proposition si celle-ci ne peut être acceptée.", 
+    "refused_examples": "Ne sont pas autorisées sur la plateforme Make.org : ",
+    "incomprehensible_solutions": {
+      "title": "Les propositions incompréhensibles",
+      "description": "La formulation et le sens de votre proposition doivent être compréhensibles par toutes et tous. Les erreurs importantes de syntaxe ou les non-sens seront refusés, vous serez invité·e·s à reformuler votre proposition.",
+      "refused_example_card": "Il faut que les citoyens se réfléchissent dans le développement par tous les pays.",
+      "validated_example_card": "Il faut que les citoyens réfléchissent au développement de l’éducation dans chaque pays."
+    }, 
+    "irrelevant_solutions": {
+      "title": "Les propositions hors sujet", 
+      "description": "Votre proposition doit répondre à la question posée dans la consultation. Dans le cas contraire, votre proposition est considérée comme hors sujet et sera refusée.", 
+      "refused_card_example": "Il faut mettre en place la coupe du monde de football tous les 2 ans.", 
+      "validated_card_example": "Il faut favoriser l’accès aux circuits courts dans les cantines d'entreprise."
+    }, 
+    "discriminatory_solutions": {
+      "title": "Les propositions discriminantes",
+      "description": "En conformité avec la loi², votre proposition ne peut pas contenir de discours incitant à la violence ou à la haine. Elle ne peut non plus contenir de propos à caractère discriminant ou diffamatoire, notamment à l'encontre de tout groupe ethnique, social ou religieux.",
+      "refused_card_example": "Il faut veiller à ce que les Bretons ne conservent pas leurs traditions dégradantes.", 
+      "validated_card_example": "Il faut veiller à ce que les Français puissent mieux communiquer ensemble.",
+      "refused_card_example_2": "Il faut interdire les croix autour du cou qui sont un symbole d'asservissement.", 
+      "validated_card_example_2": "Il faut veiller à ce que la liberté de culte soit respectée dans notre pays."
+    }, 
+    "partisan_solutions": {
+      "title": "Les propositions partisanes",
+      "description": "Votre proposition ne doit pas prendre parti (c'est-à-dire porter un message de valorisation ou de dévalorisation) envers un parti politique, une personnalité politique, une idéologie ou une religion (personnalité, symbole ou pratiques).",
+      "refused_card_example": "Il faut prendre connaissance du programme de M. XXX, ses idées sont originales pour les prochaines élections.", 
+      "validated_card_example": "Il faut se renseigner sur les programmes de chaque parti politique avant les élections.",
+      "refused_card_example_2": "Il faut relire la Bible régulièrement pour y trouver le salut.", 
+      "validated_card_example_2": "Il faut que les employeurs puissent connaître les dates de certaines fêtes religieuses : le Ramadan, Hanoucca etc."
+    }, 
+    "advertising": {
+      "title": "La publicité",
+      "description": "Vous ne pouvez pas faire de la publicité pour une marque ou une entreprise spécifique. Là encore, vous pouvez mentionner une marque ou entreprise uniquement à travers un exemple d’illustration.",
+      "refused_card_example": "Il faut que toutes les entreprises utilisent les solutions proposées par IBM.", 
+      "validated_card_example": "Il faut arrêter de consommer certains sodas trop sucrés, comme le Coca-Cola."
+    },
+    "multiple_ideas": {
+      "title": "Les idées multiples",
+      "description": "Il faut formuler une seule idée par proposition pour faciliter le vote des autres citoyens sur votre contribution. Si vous avez deux idées différentes, vous pouvez créer deux propositions.",
+      "refused_card_example": "Il faut que les produits des producteurs locaux soient accessibles, et communiquer sur les innovations en agriculture.", 
+      "validated_card_example": "Il faut que les produits des producteurs locaux soient accessibles."
+    },
+    "insults": {
+      "title": "Les injures",
+      "description": "‍Toute proposition irrespectueuse ou injurieuse sera refusée lors de la modération.",
+      "refused_card_example": "Il faut que ces idiots d’automobilistes respectent davantage le code de la route.", 
+      "validated_card_example": "Il faut que les automobilistes respectent davantage le code de la route."
+    }, 
+    "correctly_formulated_solutions": {
+      "title": "Comment formuler une proposition correctement sur Make.org ?"
+    },
+    "search_function": "Utilisez la fonction recherche pour vérifier que votre idée n’est pas déjà présente sur le site.", 
+    "concrete_elements": {
+      "text": "Pensez à préciser votre idée avec des éléments concrets pour que les citoyen·ne·s comprennent précisément votre propos.",
+      "refused_card_example": "Il faut plus d’Europe.", 
+      "validated_card_example": "Il faut donner plus de moyens à l’Union européenne.",
+      "refused_card_example_2": "Il faut réduire le chômage des jeunes.", 
+      "validated_card_example_2": "Il faut créer un Pôle Emploi pour les jeunes."
+    },
+    "understandable_language": {
+      "text": "Faites-vous comprendre le mieux possible en adoptant un langage accessible à toutes et tous.",
+      "refused_card_example": "Il faut une année de propédeutique à la fac.", 
+      "validated_card_example": "Il faut une année généraliste avant de choisir sa filière à la fac.",
+      "refused_card_example_2": "Il faut que l’ASC puisse dépister le cancer.", 
+      "validated_card_example_2": "Il faut que l’Agence pour la Santé puisse dépister le cancer."
+    }, 
+    "acronyms": {
+      "text": "Evitez d’utiliser dans votre proposition les #, @ ou autres acronymes comme “LOL”.",
+      "refused_card_example": "Il faut baisser les impôts des entrepreneurs #compétitivité", 
+      "validated_card_example": "Il faut baisser les impôts des entrepreneurs pour les rendre compétitifs !"
+    },
+    "disclaimer": "Make.org n'est pas un opérateur de plateforme en ligne relevant du champ d'application de la loi n° 2018-1202 du 22 décembre 2018 relative à la lutte contre la manipulation de l'information. A ce titre, nous ne sommes donc pas soumis aux obligations y afférentes. La véracité des informations mises en ligne sur notre site nous tient cependant à cœur, et nous détaillons au sein de la présente Charte les mesures que nous prenons en ce sens.",
+    "foot_notes": {
+      "link": "https://assets-global.website-files.com/59833d390a24e50001b873d8/62d80ca82cd8871a7331f896_Gender%20Equality%20Plan%20V1_EN.docx%20-%20Google%C2%A0Docs.pdf",
+      "ethical_charter": "Cette charte de modération a été élaborée en conformité avec la Charte éthique qui garantit la neutralité, l'indépendance et la transparence de Make.org.",
+      "code_penal": "Le Code Pénal français définit la discrimination comme « toute distinction opérée entre les personnes physiques à raison de leur origine, de leur sexe, de leur situation de famille, de leur grossesse, de leur apparence physique, de leur patronyme, de leur lieu de résidence, de leur état de santé, de leur handicap, de leurs caractéristiques génétiques, de leurs mœurs, de leur orientation ou identité sexuelle, de leur âge, de leurs opinions politiques, de leurs activités syndicales, de leur appartenance ou de leur non-appartenance, vraie ou supposée, à une ethnie, une nation, une race ou une religion déterminée ». (Article 225-1§1)."
+    }
   },
   "cookies_management": {
     "title": "Gestion des Cookies",
