--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -128,6 +128,7 @@
       "show_password": "Zobrazit heslo",
       "requirements": "Pokud není uvedeno jinak, všechna pole jsou povinná.",
       "requirements_short": "Všechna pole jsou povinná.",
+      "password_requirements": "8 characters minimum with at least 1 number, 1 upper case, and 1 special character.",
       "post_code": "Poštovní směrovací číslo nám umožňuje analyzovat výsledky podle zeměpisné oblasti.",
       "label": {
         "email": "E-mail",
