--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -128,6 +128,7 @@
       "show_password": "Показати пароль",
       "requirements": "Усі поля є обов’язковими для заповнення, якщо не вказано інше.",
       "requirements_short": "Усі поля є обов’язковими для заповнення.",
+      "password_requirements": "8 characters minimum with at least 1 number, 1 upper case, and 1 special character.",
       "post_code": "Поштовий індекс дозволяє проаналізувати результати за географічною ознакою.",
       "label": {
         "email": "Адреса ел. пошти",
