--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -75,7 +75,7 @@
     },
     "moderation": {
       "title": "Make.org ∙ Charte de modération",
-      "description": "Comment passer la modération ? Comment rencontrer un franc succès sur la plateforme ? Plutôt qu’un (trop) long discours, nous prenons le parti de quelques exemples humoristiques (et félins) pour vous expliquer notre politique de modération."
+      "description": "Quelles sont les propositions refusées lors de la modération sur Make.org ? Comment formuler une proposition correctement ? Chaque proposition soumise sur la plateforme est modérée à la main par les équipes de modérateurs de Make.org, au regard des critères suivants de la charte de modération."
     },
     "privacy_policy": {
       "title": "Charte de données personnelles - Make.org",
