--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -642,7 +642,7 @@
   },
   "data_policy_modal": {
     "title": "Оновлення нашої політики обробки даних",
-    "description": "Make.org зобов’язується поважати вашу конфіденційність під час кожного відвідування вами сайту. Щоб продовжити перегляд під час входу на Make.org, ви повинні погодитися з нашою оновленою {{data_policy_link}} ",
+    "description": "Make.org зобов’язується поважати вашу конфіденційність під час кожного відвідування вами сайту. Щоб продовжити перегляд під час входу на Make.org, ви повинні погодитися з нашою оновленою ",
     "data_policy_link": "політикою обробки даних.",
     "consent": "<strong>Я приймаю оновлену політику обробки даних</strong> і можу користуватися своїм особистим кабінетом Make.org",
     "validate": "Підтвердити",
@@ -1239,8 +1239,7 @@
     "host_address": "{{make_host_address}} ФРАНЦІЯ",
     "host_phone": "Номер телефону: ",
     "host_phone_number": "{{host_number}}",
-    "cnil": "Номер декларації CNIL: ",
-    "cnil_number": "{{cnil_number}}"
+    "eu_mention": ""
   },
   "cookies_management": {
     "title": "УПРАВЛІННЯ ФАЙЛАМИ COOKIE",
