--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -637,7 +637,7 @@
   },
   "data_policy_modal": {
     "title": "Mise à jour de notre politique de données",
-    "description": "Make.org s’engage à respecter vos données personnelles à chacune de vos visites sur le site. Pour poursuivre votre navigation en étant connecté(e) sur Make.org vous devez accepter notre mise à jour de la {{data_policy_link}} ",
+    "description": "Make.org s’engage à respecter vos données personnelles à chacune de vos visites sur le site. Pour poursuivre votre navigation en étant connecté(e) sur Make.org vous devez accepter notre mise à jour de la ",
     "data_policy_link": "politique de données.",
     "consent": "<strong>J'accepte la nouvelle politique de données</strong> et je pourrai utiliser mon espace citoyen Make.org",
     "validate": "Je valide",
@@ -1216,8 +1216,7 @@
     "host_address": "{{make_host_address}} FRANCE",
     "host_phone": "Numéro de téléphone : ",
     "host_phone_number": "{{host_number}}",
-    "cnil": "Numéro de déclaration CNIL : ",
-    "cnil_number": "{{cnil_number}}"
+    "eu_mention": "La Commission européenne met à disposition une plateforme de règlement des litiges en ligne pour les consommateurs, à l'adresse https://ec.europa.eu/consumers/odr."
   },
   "moderation_charter": {
     "unsuitable_label": "DÉCONSEILLÉ",
