--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1379,7 +1379,8 @@
       "title": "@@moderation_charter.irrelevant_solutions.title|fr:Les propositions hors sujet",
       "description": "@@moderation_charter.irrelevant_solutions.description|fr:Votre proposition doit répondre à la question posée dans la consultation. Dans le cas contraire, votre proposition est considérée comme hors sujet et sera refusée.",
       "refused_card_example": "@@moderation_charter.irrelevant_solutions.refused_card_example|fr:Il faut mettre en place la coupe du monde de football tous les 2 ans.",
-      "validated_card_example": "@@moderation_charter.irrelevant_solutions.validated_card_example|fr:Il faut favoriser l’accès aux circuits courts dans les cantines d'entreprise."
+      "validated_card_example": "@@moderation_charter.irrelevant_solutions.validated_card_example|fr:Il faut favoriser l’accès aux circuits courts dans les cantines d'entreprise.",
+      "example": "@@moderation_charter.irrelevant_solutions.example|fr:Par exemple pour la question “Comment permettre à chacun de mieux manger ?”"
     },
     "discriminatory_solutions": {
       "title": "@@moderation_charter.discriminatory_solutions.title|fr:Les propositions discriminantes",
